[BlackBerry] Unable to download blob resource https://bugs.webkit.org/show_bug.cgi?id=115888

Reviewed by Benjamin Poulain.

Source/WebCore:

Add BlobStream to handle over blob data from BlobResourceHandle to download stream.
RIM bug 331086, internally reviewed by Charles Wei and Leo Yang.

* PlatformBlackBerry.cmake:
* platform/network/blackberry/BlobStream.cpp: Added.
(WebCore):
(WebCore::BlobStream::BlobStream):
(WebCore::BlobStream::~BlobStream):
(WebCore::BlobStream::didReceiveData):
(WebCore::BlobStream::didFinishLoading):
(WebCore::BlobStream::didFail):
(WebCore::BlobStream::url):
(WebCore::BlobStream::mimeType):
* platform/network/blackberry/BlobStream.h: Added.
(WebCore):
(BlobStream):

Source/WebKit/blackberry:

For blob resource (blob:http....), it's not suitable to go to NetworkStream
which don't handle "blob" protocol at all. since blob data already handled
in BlobResourceHandle, simply get the data out to download stream.

RIM bug 331086, internally reviewed by Charles Wei and Leo Yang.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::convertMainResourceLoadToDownload):


Canonical link: https://commits.webkit.org/134639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150217 268f45cc-cd09-0410-ab3c-d52691b4dbfc